# pokemon-api

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/: __main__.py
src/pokemon/: asgi.py
src/pokemon/apps/api/: system.py
src/pokemon/apps/api/v1/: controllers.py  models.py  views.py
src/pokemon/apps/pokemon_api/: commands.py  entity.py  repository.py
src/pokemon/core/: create_app.py  lifespan.py  mongodb.py  routers.py  signals.py
src/pokemon/core/settings/: app_settings.py  mongo_settings.py
src/pokemon/utils/mongo/: base_queries.py  exceptions.py  queries.py
